# c-Challenge

./: CMakeLists.txt  README.md
src/: main.cpp
src/controller/: ManageCarsController.cpp  ManageCarsController.hpp  ManageTransactionController.cpp  ManageTransactionController.hpp  ManageUsersController.cpp  ManageUsersController.hpp  PricingService.cpp  PricingService.hpp
src/model/: Car.hpp  PricingStrategy.hpp  Transaction.hpp  User.hpp
src/view/client/: ClientFactory.cpp  ClientFactory.hpp  ClientInterface.hpp  ConsoleView.hpp  HttpView.hpp
src/view/db/: DatabaseView.hpp
test/: main.cpp
